--- a/.travis.yml
+++ b/.travis.yml
@@ -61,6 +61,7 @@ script:
     - make distdir VERSION=$HOST
     - cd merit-$HOST
     - ./configure --cache-file=../config.cache $MERIT_CONFIG_ALL $MERIT_CONFIG || ( cat config.log && false)
+    - cd src && make obj/build.h && cd ..
     - make $MAKEJOBS $GOAL || ( echo "Build failure. Verbose build follows." && make $GOAL V=1 ; false )
     - export LD_LIBRARY_PATH=$TRAVIS_BUILD_DIR/depends/$HOST/lib
     - if [ "$RUN_TESTS" = "true" ]; then travis_wait 30 make $MAKEJOBS check VERBOSE=1; fi
