--- a/src/Makefile.qt.include
+++ b/src/Makefile.qt.include
@@ -244,13 +244,10 @@ MERIT_QT_H = \
   qt/winshutdownmonitor.h
 
 RES_ICONS = \
-  qt/res/icons/add.png \
-  qt/res/icons/address-book.png \
   qt/res/icons/about.png \
   qt/res/icons/about_qt.png \
-  qt/res/icons/merit.ico \
-  qt/res/icons/merit_testnet.ico \
-  qt/res/icons/merit.png \
+  qt/res/icons/add.png \
+  qt/res/icons/address-book.png \
   qt/res/icons/chevron.png \
   qt/res/icons/clock1.png \
   qt/res/icons/clock2.png \
@@ -277,10 +274,14 @@ RES_ICONS = \
   qt/res/icons/hd_disabled.png \
   qt/res/icons/hd_enabled.png \
   qt/res/icons/history.png \
+  qt/res/icons/hourglass.png \
   qt/res/icons/info.png \
   qt/res/icons/key.png \
   qt/res/icons/lock_closed.png \
   qt/res/icons/lock_open.png \
+  qt/res/icons/merit.ico \
+  qt/res/icons/merit.png \
+  qt/res/icons/merit_testnet.ico \
   qt/res/icons/network_disabled.png \
   qt/res/icons/open.png \
   qt/res/icons/overview.png \
@@ -295,10 +296,10 @@ RES_ICONS = \
   qt/res/icons/transaction_conflicted.png \
   qt/res/icons/tx_inout.png \
   qt/res/icons/tx_input.png \
-  qt/res/icons/tx_output.png \
   qt/res/icons/tx_mined.png \
-  qt/res/icons/warning.png \
-  qt/res/icons/verify.png
+  qt/res/icons/tx_output.png \
+  qt/res/icons/verify.png \
+  qt/res/icons/warning.png
 
 MERIT_QT_BASE_CPP = \
   qt/bantablemodel.cpp \
