move qr encoding to its own file

--- a/src/Makefile.qt.include
+++ b/src/Makefile.qt.include
@@ -217,6 +217,7 @@ MERIT_QT_H = \
   qt/paymentserver.h \
   qt/peertablemodel.h \
   qt/platformstyle.h \
+  qt/qrutil.h \
   qt/qvalidatedlineedit.h \
   qt/qvaluecombobox.h \
   qt/receivecoinsdialog.h \
