WIP adding an export wallet dialog with qr code

--- a/src/Makefile.qt.include
+++ b/src/Makefile.qt.include
@@ -100,6 +100,7 @@ QT_FORMS_UI = \
   qt/forms/coincontroldialog.ui \
   qt/forms/editaddressdialog.ui \
   qt/forms/enterunlockcode.ui \
+  qt/forms/exportwalletdialog.ui \
   qt/forms/helpmessagedialog.ui \
   qt/forms/intro.ui \
   qt/forms/modaloverlay.ui \
@@ -129,6 +130,7 @@ QT_MOC_CPP = \
   qt/moc_coincontroltreewidget.cpp \
   qt/moc_csvmodelwriter.cpp \
   qt/moc_editaddressdialog.cpp \
+  qt/moc_exportwalletdialog.cpp \
   qt/moc_enterunlockcode.cpp \
   qt/moc_guiutil.cpp \
   qt/moc_intro.cpp \
@@ -201,6 +203,7 @@ MERIT_QT_H = \
   qt/coincontroltreewidget.h \
   qt/csvmodelwriter.h \
   qt/editaddressdialog.h \
+  qt/exportwalletdialog.h \
   qt/enterunlockcode.h \
   qt/guiconstants.h \
   qt/guiutil.h \
@@ -316,6 +319,7 @@ MERIT_QT_BASE_CPP = \
   qt/guiutil.cpp \
   qt/intro.cpp \
   qt/enterunlockcode.cpp \
+  qt/exportwalletdialog.cpp \
   qt/modaloverlay.cpp \
   qt/networkstyle.cpp \
   qt/notificator.cpp \
