--- a/src/Makefile.qt.include
+++ b/src/Makefile.qt.include
@@ -291,6 +291,9 @@ RES_ICONS = \
   qt/res/icons/send.png \
   qt/res/icons/synced.png \
   qt/res/icons/spread.png \
+  qt/res/icons/community.png \
+  qt/res/icons/safety.png \
+  qt/res/icons/simplicity.png \
   qt/res/icons/transaction0.png \
   qt/res/icons/transaction2.png \
   qt/res/icons/transaction_abandoned.png \
