Add extracting the archive and state management.
The code uses libarchive which has been included as a dependancy for the
qt wallet. The state is stored in QSettings and also to support older
versions, if there is a wallet.dat file then snashot download will be
skipped.

--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -30,6 +30,7 @@ LIBMERIT_CLI=libmerit_cli.a
 LIBMERIT_UTIL=libmerit_util.a
 LIBMERIT_CRYPTO=crypto/libmerit_crypto.a
 LIBMERITQT=qt/libmeritqt.a
+LIBARCHIVE=-larchive
 LIBSECP256K1=secp256k1/libsecp256k1.la
 
 if ENABLE_ZMQ
