--- a/depends/config.site.in
+++ b/depends/config.site.in
@@ -58,8 +58,8 @@ if test -z "@allow_host_packages@"; then
   export PKGCONFIG_LIBDIR=
 fi
 
-CPPFLAGS="-I$depends_prefix/include/ $CPPFLAGS"
-LDFLAGS="-L$depends_prefix/lib $LDFLAGS"
+CPPFLAGS="-I$depends_prefix/include/ -I$depends_prefix/native/include/ $CPPFLAGS"
+LDFLAGS="-L$depends_prefix/lib -L$depends_prefix/native/lib $LDFLAGS"
 
 CC="@CC@"
 CXX="@CXX@"
