--- a/src/Makefile.qt.include
+++ b/src/Makefile.qt.include
@@ -434,9 +434,9 @@ endif
 if ENABLE_ZMQ
 qt_merit_qt_LDADD += $(LIBMERIT_ZMQ) $(ZMQ_LIBS)
 endif
-qt_merit_qt_LDADD += $(LIBARCHIVE) $(LIBMERIT_CLI) $(LIBMERIT_COMMON) $(LIBMERIT_UTIL) $(LIBMERIT_CONSENSUS) $(LIBMERIT_CRYPTO) $(LIBUNIVALUE) $(LIBLEVELDB) $(LIBLEVELDB_SSE42) $(LIBMEMENV) \
+qt_merit_qt_LDADD += $(LIBMERIT_CLI) $(LIBMERIT_COMMON) $(LIBMERIT_UTIL) $(LIBMERIT_CONSENSUS) $(LIBMERIT_CRYPTO) $(LIBUNIVALUE) $(LIBLEVELDB) $(LIBLEVELDB_SSE42) $(LIBMEMENV) \
   $(BOOST_LIBS) $(QT_LIBS) $(QT_DBUS_LIBS) $(QR_LIBS) $(PROTOBUF_LIBS) $(BDB_LIBS) $(SSL_LIBS) $(CRYPTO_LIBS) $(MINIUPNPC_LIBS) $(LIBSECP256K1) \
-  $(EVENT_PTHREADS_LIBS) $(EVENT_LIBS)
+  $(EVENT_PTHREADS_LIBS) $(EVENT_LIBS) $(LIBARCHIVE) 
 qt_merit_qt_LDFLAGS = $(RELDFLAGS) $(AM_LDFLAGS) $(QT_LDFLAGS) $(LIBTOOL_APP_LDFLAGS)
 qt_merit_qt_LIBTOOLFLAGS = --tag CXX
 
