--- a/src/Makefile.qt.include
+++ b/src/Makefile.qt.include
@@ -383,7 +383,7 @@ if ENABLE_WALLET
 MERIT_QT_CPP += $(MERIT_QT_WALLET_CPP)
 endif
 
-RES_IMAGES = 
+RES_IMAGES =
 
 RES_MOVIES = $(wildcard $(srcdir)/qt/res/movies/spinner-*.png)
 
@@ -436,7 +436,7 @@ qt_merit_qt_LDADD += $(LIBMERIT_ZMQ) $(ZMQ_LIBS)
 endif
 qt_merit_qt_LDADD += $(LIBMERIT_CLI) $(LIBMERIT_COMMON) $(LIBMERIT_UTIL) $(LIBMERIT_CONSENSUS) $(LIBMERIT_CRYPTO) $(LIBUNIVALUE) $(LIBLEVELDB) $(LIBLEVELDB_SSE42) $(LIBMEMENV) \
   $(BOOST_LIBS) $(QT_LIBS) $(QT_DBUS_LIBS) $(QR_LIBS) $(PROTOBUF_LIBS) $(BDB_LIBS) $(SSL_LIBS) $(CRYPTO_LIBS) $(MINIUPNPC_LIBS) $(LIBSECP256K1) \
-  $(EVENT_PTHREADS_LIBS) $(EVENT_LIBS) $(LIBARCHIVE) 
+  $(EVENT_PTHREADS_LIBS) $(EVENT_LIBS) $(ARCHIVE_LIBS)
 qt_merit_qt_LDFLAGS = $(RELDFLAGS) $(AM_LDFLAGS) $(QT_LDFLAGS) $(LIBTOOL_APP_LDFLAGS)
 qt_merit_qt_LIBTOOLFLAGS = --tag CXX
 
