minimal language and cache changes

--- a/.travis.yml
+++ b/.travis.yml
@@ -1,8 +1,9 @@
 sudo: required
 dist: trusty
 os: linux
-language: generic
+language: minimal
 cache:
+  ccache: true
   directories:
   - depends/built
   - depends/sdk-sources
