--- a/src/Makefile.qt.include
+++ b/src/Makefile.qt.include
@@ -393,7 +393,7 @@ MERIT_QT_INCLUDES = -I$(builddir)/qt -I$(srcdir)/qt -I$(srcdir)/qt/forms \
   -I$(builddir)/qt/forms -DQT_NO_KEYWORDS
 
 qt_libmeritqt_a_CPPFLAGS = $(AM_CPPFLAGS) $(MERIT_INCLUDES) $(MERIT_QT_INCLUDES) \
-  $(QT_INCLUDES) $(QT_DBUS_INCLUDES) $(PROTOBUF_CFLAGS) $(QR_CFLAGS)
+  $(QT_INCLUDES) $(QT_DBUS_INCLUDES) $(PROTOBUF_CFLAGS) $(QR_CFLAGS) $(ARCHIVE_CFLAGS)
 qt_libmeritqt_a_CXXFLAGS = $(AM_CXXFLAGS) $(QT_PIE_FLAGS)
 
 qt_libmeritqt_a_SOURCES = $(MERIT_QT_CPP) $(MERIT_QT_H) $(QT_FORMS_UI) \
@@ -417,7 +417,7 @@ $(QT_MOC_CPP): $(PROTOBUF_H)
 
 # merit-qt binary #
 qt_merit_qt_CPPFLAGS = $(AM_CPPFLAGS) $(MERIT_INCLUDES) $(MERIT_QT_INCLUDES) \
-  $(QT_INCLUDES) $(PROTOBUF_CFLAGS) $(QR_CFLAGS)
+  $(QT_INCLUDES) $(PROTOBUF_CFLAGS) $(QR_CFLAGS) $(ARCHIVE_CFLAGS)
 qt_merit_qt_CXXFLAGS = $(AM_CXXFLAGS) $(QT_PIE_FLAGS)
 
 qt_merit_qt_SOURCES = qt/merit.cpp
