--- a/.travis.yml
+++ b/.travis.yml
@@ -42,7 +42,7 @@ before_script:
     # - if [ -n "$OSX_SDK" -a -f depends/sdk-sources/MacOSX${OSX_SDK}.sdk.tar.gz ]; then tar -C depends/SDKs -xf depends/sdk-sources/MacOSX${OSX_SDK}.sdk.tar.gz; fi
     # - cd depends && make $MAKEJOBS HOST=$HOST $DEP_OPTS
 script:
-#    - ./autogen.sh
+    - ./autogen.sh
 #    - CFLAGS=-fPIC CXXFLAGS=-fPIC CONFIG_SITE=$PWD/depends/$HOST/share/config.site ./configure --prefix=/ --with-gui=qt5 --with-pic
 #    - cd src && make obj/build.h && cd ..
 #    - make $MAKEJOBS
