--- a/.travis.yml
+++ b/.travis.yml
@@ -40,14 +40,15 @@ before_script:
     # - mkdir -p depends/SDKs depends/sdk-sources
     # - if [ -n "$OSX_SDK" -a ! -f depends/sdk-sources/MacOSX${OSX_SDK}.sdk.tar.gz ]; then curl --location --fail $SDK_URL/MacOSX${OSX_SDK}.sdk.tar.gz -o depends/sdk-sources/MacOSX${OSX_SDK}.sdk.tar.gz; fi
     # - if [ -n "$OSX_SDK" -a -f depends/sdk-sources/MacOSX${OSX_SDK}.sdk.tar.gz ]; then tar -C depends/SDKs -xf depends/sdk-sources/MacOSX${OSX_SDK}.sdk.tar.gz; fi
-    - cd depends && make $MAKEJOBS HOST=$HOST $DEP_OPTS && cd ..
+    # - cd depends && make $MAKEJOBS HOST=$HOST $DEP_OPTS && cd ..
 script:
-    - ./autogen.sh
-    - make clean
-    - CFLAGS=-fPIC CXXFLAGS=-fPIC CONFIG_SITE=$PWD/depends/$HOST/share/config.site ./configure --prefix=/ --with-gui=qt5 --with-pic
-    - cd src && make obj/build.h && cd ..
-    - make $MAKEJOBS
-    - make install DESTDIR=$PWD/dist
+    # - ./autogen.sh
+    # - make clean
+    # - CFLAGS=-fPIC CXXFLAGS=-fPIC CONFIG_SITE=$PWD/depends/$HOST/share/config.site ./configure --prefix=/ --with-gui=qt5 --with-pic
+    # - cd src && make obj/build.h && cd ..
+    # - make $MAKEJOBS
+    # - make install DESTDIR=$PWD/dist
+    gcc -version
 after_script:
     - echo $TRAVIS_COMMIT_RANGE
     - echo $TRAVIS_COMMIT_LOG
