Adding invite buffer.
Stores stats of invites by block height. Also layed out groudwork for
computing and validating improved invite generation algorithm.

The stores stats will be used to memoize the computed moving averages
for a block height so that a slope can be computed easily and quickly.

The invites adjustment will handle exponential growth by adjusting the
rate linearly based on past data.

--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -132,6 +132,7 @@ MERIT_CORE_H = \
   pog/anv.h \
   pog/select.h \
   pog/wrs.h \
+  pog/invitebuffer.h \
   pog/reward.h \
   protocol.h \
   random.h \
@@ -226,6 +227,7 @@ libmerit_server_a_SOURCES = \
   pog/reward.cpp \
   pog/select.cpp \
   pog/wrs.cpp \
+  pog/invitebuffer.cpp \
   policy/fees.cpp \
   policy/policy.cpp \
   policy/rbf.cpp \
