--- a/src/Makefile.qt.include
+++ b/src/Makefile.qt.include
@@ -101,6 +101,7 @@ QT_FORMS_UI = \
   qt/forms/editaddressdialog.ui \
   qt/forms/enterunlockcode.ui \
   qt/forms/exportwalletdialog.ui \
+  qt/forms/importwalletdialog.ui \
   qt/forms/helpmessagedialog.ui \
   qt/forms/intro.ui \
   qt/forms/modaloverlay.ui \
@@ -133,6 +134,7 @@ QT_MOC_CPP = \
   qt/moc_csvmodelwriter.cpp \
   qt/moc_editaddressdialog.cpp \
   qt/moc_exportwalletdialog.cpp \
+  qt/moc_importwalletdialog.cpp \
   qt/moc_enterunlockcode.cpp \
   qt/moc_guiutil.cpp \
   qt/moc_intro.cpp \
@@ -207,6 +209,7 @@ MERIT_QT_H = \
   qt/csvmodelwriter.h \
   qt/editaddressdialog.h \
   qt/exportwalletdialog.h \
+  qt/importwalletdialog.h \
   qt/enterunlockcode.h \
   qt/guiconstants.h \
   qt/guiutil.h \
@@ -327,6 +330,7 @@ MERIT_QT_BASE_CPP = \
   qt/intro.cpp \
   qt/enterunlockcode.cpp \
   qt/exportwalletdialog.cpp \
+  qt/importwalletdialog.cpp \
   qt/modaloverlay.cpp \
   qt/networkstyle.cpp \
   qt/notificator.cpp \
