Adding PoG2 files which are just a copy of pog for now.
Building the groundwork for PoG2 changes.

--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -134,6 +134,10 @@ MERIT_CORE_H = \
   pog/wrs.h \
   pog/invitebuffer.h \
   pog/reward.h \
+  pog2/anv.h \
+  pog2/select.h \
+  pog2/wrs.h \
+  pog2/reward.h \
   protocol.h \
   random.h \
   refdb.h \
@@ -228,6 +232,10 @@ libmerit_server_a_SOURCES = \
   pog/select.cpp \
   pog/wrs.cpp \
   pog/invitebuffer.cpp \
+  pog2/anv.cpp \
+  pog2/reward.cpp \
+  pog2/select.cpp \
+  pog2/wrs.cpp \
   policy/fees.cpp \
   policy/policy.cpp \
   policy/rbf.cpp \
