--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -134,7 +134,7 @@ MERIT_CORE_H = \
   pog/wrs.h \
   pog/invitebuffer.h \
   pog/reward.h \
-  pog2/anv.h \
+  pog2/cgs.h \
   pog2/select.h \
   pog2/wrs.h \
   pog2/reward.h \
@@ -232,7 +232,7 @@ libmerit_server_a_SOURCES = \
   pog/select.cpp \
   pog/wrs.cpp \
   pog/invitebuffer.cpp \
-  pog2/anv.cpp \
+  pog2/cgs.cpp \
   pog2/reward.cpp \
   pog2/select.cpp \
   pog2/wrs.cpp \
